<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".JacksonDemoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/platform"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="56dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16"
                android:src="@drawable/ic_close_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/title"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16"
                android:text="@string/start_jackson_parser"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iterations_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/iterations_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/number_of_iterations"
                    android:text="@string/_1000" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/serialize_radiogroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iterations_view">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/serialize_deserialize_checkbox"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@string/serialize_and_deserialize" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/serialize_only_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@string/serialize_only" />
            </RadioGroup>


            <com.sample.jacksongson.ExpandableTitleTextview
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_expand_more_black_24dp"
                android:paddingStart="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:text="@string/advanced"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serialize_radiogroup" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_parser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_parser"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>