<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/jackson_demo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/jackson_sample"
        app:layout_constraintBottom_toTopOf="@id/gson_demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_iteration_jackson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_iteration"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/jackson_demo"
        app:layout_constraintTop_toBottomOf="@id/jackson_demo" />

    <TextView
        android:id="@+id/current_iteration_jackson_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:text="0"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/current_iteration_jackson"
        app:layout_constraintTop_toTopOf="@id/current_iteration_jackson" />

    <ProgressBar
        android:id="@+id/progress_bar_jackson"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/current_iteration_jackson"
        app:layout_constraintStart_toEndOf="@id/current_iteration_jackson_value"
        app:layout_constraintTop_toTopOf="@id/current_iteration_jackson" />

    <TextView
        android:id="@+id/total_time_jack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        app:layout_constraintStart_toStartOf="@id/current_iteration_jackson"
        app:layout_constraintTop_toBottomOf="@id/current_iteration_jackson" />

    <TextView
        android:id="@+id/total_time_jack_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        app:layout_constraintStart_toEndOf="@id/total_time_jack"
        app:layout_constraintTop_toTopOf="@id/total_time_jack" />

    <TextView
        android:id="@+id/average_time_jack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_time"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/total_time_jack"
        app:layout_constraintTop_toBottomOf="@id/total_time_jack" />

    <TextView
        android:id="@+id/average_time_jack_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/average_time_jack"
        app:layout_constraintTop_toTopOf="@id/average_time_jack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gson_demo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/gson_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jackson_demo" />

    <TextView
        android:id="@+id/current_iteration_gson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_iteration"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/gson_demo"
        app:layout_constraintTop_toBottomOf="@id/gson_demo" />

    <TextView
        android:id="@+id/current_iteration_gson_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:text="0"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/current_iteration_gson"
        app:layout_constraintTop_toTopOf="@id/current_iteration_gson" />

    <ProgressBar
        android:id="@+id/progress_bar_gson"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/current_iteration_gson"
        app:layout_constraintStart_toEndOf="@id/current_iteration_gson_value"
        app:layout_constraintTop_toTopOf="@id/current_iteration_gson" />

    <TextView
        android:id="@+id/total_time_gson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        app:layout_constraintStart_toStartOf="@id/current_iteration_gson"
        app:layout_constraintTop_toBottomOf="@id/current_iteration_gson" />

    <TextView
        android:id="@+id/total_time_gson_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        app:layout_constraintStart_toEndOf="@id/total_time_gson"
        app:layout_constraintTop_toTopOf="@id/total_time_gson" />

    <TextView
        android:id="@+id/average_time_gson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_time"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/total_time_gson"
        app:layout_constraintTop_toBottomOf="@id/total_time_gson" />

    <TextView
        android:id="@+id/average_time_gson_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/average_time_gson"
        app:layout_constraintTop_toTopOf="@id/average_time_gson" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>